endpoints: retrieve reactions
