# docs/swagger.json
@@ -465,6 +465,52 @@
                 }
             }
         },
+        "/feed/reactions/{focus}/{slug}": {
+            "get": {
+                "description": "This endpoint retrieves paginated responses of reactions of post, comment, reply",
+                "tags": [
+                    "Feed"
+                ],
+                "summary": "Retrieve Latest Reactions of a Post, Comment, or Reply",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Specify the usage. Use any of the three: POST, COMMENT, REPLY",
+                        "name": "focus",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Enter the slug of the post or comment or reply",
+                        "name": "slug",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Current Page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Reaction Type. Must be any of these: LIKE, LOVE, HAHA, WOW, SAD, ANGRY",
+                        "name": "reaction_type",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.ReactionsResponseSchema"
+                        }
+                    }
+                }
+            }
+        },
         "/general/site-detail": {
             "get": {
                 "description": "This endpoint retrieves few details of the site/application.",
@@ -688,6 +734,61 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/schemas.PostsResponseDataSchema"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Data fetched/created/updated/deleted"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "schemas.ReactionSchema": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "example": "d10dde64-a242-4ed0-bd75-4c759644b3a6"
+                },
+                "rtype": {
+                    "type": "string",
+                    "example": "LIKE"
+                },
+                "user": {
+                    "$ref": "#/definitions/schemas.UserDataSchema"
+                }
+            }
+        },
+        "schemas.ReactionsResponseDataSchema": {
+            "type": "object",
+            "properties": {
+                "current_page": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "last_page": {
+                    "type": "integer",
+                    "example": 100
+                },
+                "per_page": {
+                    "type": "integer",
+                    "example": 100
+                },
+                "reactions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.ReactionSchema"
+                    }
+                }
+            }
+        },
+        "schemas.ReactionsResponseSchema": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/schemas.ReactionsResponseDataSchema"
                 },
                 "message": {
                     "type": "string",
