# schemas/feed.go
@@ -3,6 +3,7 @@ package schemas
 import (
 	"time"
 
+	"github.com/google/uuid"
 	"github.com/kayprogrammer/socialnet-v4/ent"
 	"github.com/kayprogrammer/socialnet-v4/utils"
 )
@@ -42,15 +43,26 @@ type PostInputSchema struct {
 	FileType			*string		`json:"file_type" example:"image/jpeg" validate:"omitempty,file_type_validator"`
 }
 
+// REACTION SCHEMA
+type ReactionSchema struct {
+	Edges        	*ent.ReactionEdges 	`json:"edges,omitempty" swaggerignore:"true"`
+    ID 				uuid.UUID			`json:"id" example:"d10dde64-a242-4ed0-bd75-4c759644b3a6"`
+    User 			UserDataSchema		`json:"user"`
+    Rtype 			string				`json:"rtype" example:"LIKE"`
+}
+
+func (reaction ReactionSchema) Init() ReactionSchema {
+	// Set User Details.
+	reaction.User = reaction.User.Init(reaction.Edges.User)
+
+	reaction.Edges = nil // Omit edges
+	return reaction
+}
+
 // RESPONSE SCHEMAS
 type PostsResponseDataSchema struct {
 	PaginatedResponseDataSchema
 	Items			[]PostSchema		`json:"posts"`
-}
-
-type PostResponseSchema struct {
-	ResponseSchema
-	Data			PostSchema		`json:"data"`
 }
 
 func (data PostsResponseDataSchema) Init () PostsResponseDataSchema {
@@ -61,6 +73,11 @@ func (data PostsResponseDataSchema) Init () PostsResponseDataSchema {
 	}
 	data.Items = items
 	return data
+}
+
+type PostResponseSchema struct {
+	ResponseSchema
+	Data			PostSchema		`json:"data"`
 }
 
 type PostsResponseSchema struct {
@@ -87,4 +104,23 @@ func (postData PostInputResponseDataSchema) Init(fileType *string) PostInputResp
 type PostInputResponseSchema struct {
 	ResponseSchema
 	Data PostInputResponseDataSchema `json:"data"`
+}
+
+type ReactionsResponseDataSchema struct {
+	PaginatedResponseDataSchema
+	Items			[]ReactionSchema		`json:"reactions"`
+}
+
+func (data ReactionsResponseDataSchema) Init () ReactionsResponseDataSchema {
+	// Set Initial Data
+	items := data.Items
+	for i := range items {
+		items[i] = items[i].Init()
+	}
+	data.Items = items
+	return data
+}
+type ReactionsResponseSchema struct {
+	ResponseSchema
+	Data			ReactionsResponseDataSchema		`json:"data"`
 }
